Changelog:

12.28.13
Fixed inputbuffer not being cleared at game over
Fixed playerdummies and kick trails being drawn at rematch
Fixed arrays being passed to gameoverstate by reference instead of copied
TwoTouch slows down everything when he gets the ball
Removed 640x480 resolution support
Greyed out resolution option in fullscreen mode
Implemented displayID option

12.26.13
Made graphical improvements to gameover screen and mainmenu

12.25.13
Cleared inputbuffer upon entering MenuPauseState
Can press start to enter MenuPauseState

10.12.13
Removed inputDelay from MenuGameSetupState, was redundant and buggy.
initFields() in GameplayState is not called from enter(), to allow resuming after a pause.
	It's now called by MenuTeamSetupState before entering GameplayState.
Pause menu can now be exited from by pressing ESCAPE
Pause menu is mostly functional
Fixed some background music bugs, also GameOverState fades out bgm upon entry

9.24.13
Goals and game mode select graphics tweaks

9.23.14
Ball now teleports to spawn location when put back in play, hopefully preventing situations where the ball never respawns
The text is aligned in gameoverstate
Foursquare implemented

9.14.14
Crazy King graphical effects updated

9.7.13
Added 4P functionality to gameplaystate and menuteamsetup
Added Crazy King mode (officially called Golden Goal, might change)

9.3.13
Fixed resolution options menu bug

9.2.13
Added a few additional sound effects

8.30.13
Added confetti effect to GameOverState
GameOverState now draws the players on each team, and also has them in the correct colour
Player and Team select menus now require an additional button press after everyone's readied up

8.29.13
Added animation for going back from team select to game mode select
Added new graphics for score and timer in gameplaystate
Changed cursor to full screen. Have option to slide cursor instead of teleporting it, but feels sluggish at moment.