@@ -5,7 +5,7 @@ FULLSCREEN = false
 
 [AUDIO]
 MASTER = 8
-EFFECTS = 10
+EFFECTS = 9
 AMBIENT = 10
 
 [GAMEPLAY]
